# Plan-Manager

./: extract_plan_info.py  main.py  models.py  parsing.py  pyproject.toml  replit.nix
migrations/versions/: a9056ac0eb8a_add_new_columns_to_plandocument.py
static/: scripts.js  styles.css
templates/: add_plan.html  header.html  index.html  view_plan.html
