[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Andrew Furman"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.0.0"  # Updated version to ensure compatibility
gunicorn = "^21.2.0"
pymupdf = "^1.19.6"
fitz = "^0.0.1.dev2"
requests = "^2.32.3"
flask-migrate = "^4.0.0"  # Add this line

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"